JCLAW-403: NotificationBus concurrent deadline-bounded fan-out
Replace the 2-thread fixed pool with a per-task virtual-thread executor so
every listener dispatch runs concurrently, and wait on each future against a
single shared deadline (LISTENER_TIMEOUT_MS from the start of the wait loop)
instead of a fresh budget per future. The publisher's total block is now
bounded to ~one per-listener cap regardless of listener count, restoring the
class-javadoc invariant that a slow SSE writer cannot stall fan-out. Every
listener is still dispatched, slow/failing ones are still timed out and removed
without aborting the rest, and no event is dropped for healthy listeners.

Co-Authored-By: Claude Opus 4.8 (1M context) <noreply@anthropic.com>