@@ -11,7 +11,6 @@ import java.util.concurrent.ExecutorService;
 import java.util.concurrent.Executors;
 import java.util.concurrent.TimeUnit;
 import java.util.concurrent.TimeoutException;
-import java.util.concurrent.atomic.AtomicInteger;
 import java.util.function.Consumer;
 
 /**
@@ -21,10 +20,13 @@ import java.util.function.Consumer;
  *
  * Events are typed JSON objects: { "type": "skill.promoted", "data": { ... } }
  *
- * Each listener invocation is dispatched on a small shared platform-thread
- * executor with a per-listener timeout. Listeners that throw or exceed the
- * timeout are removed so that a slow/stalled SSE writer can never block the
- * fan-out for other subscribers.
+ * Each listener invocation is dispatched on a per-task virtual-thread
+ * executor with a per-listener timeout. Because every listener runs on its
+ * own thread, all dispatches proceed concurrently and the publisher's total
+ * wait is bounded to a single shared deadline ({@code LISTENER_TIMEOUT_MS}
+ * from the first {@code get}) regardless of listener count — so a
+ * slow/stalled SSE writer can never block the fan-out for other subscribers.
+ * Listeners that throw or exceed the timeout are removed.
  */
 public class NotificationBus {
 
@@ -36,13 +38,12 @@ public class NotificationBus {
     /** Per-listener dispatch timeout. SSE writes hanging longer indicate a dead client. */
     public static final long LISTENER_TIMEOUT_MS = 3_000L;
 
-    private static final AtomicInteger THREAD_COUNTER = new AtomicInteger();
-
-    private static final ExecutorService EXECUTOR = Executors.newFixedThreadPool(2, r -> {
-        var t = new Thread(r, "notification-bus-" + THREAD_COUNTER.incrementAndGet());
-        t.setDaemon(true);
-        return t;
-    });
+    // Per-task virtual threads so every listener dispatch runs concurrently — the
+    // per-listener timeout then actually caps the publisher, instead of futures
+    // queueing behind a fixed worker count. SSE writes are blocking socket I/O
+    // (not Thread.sleep), so virtual threads unmount cleanly while a writer stalls.
+    private static final ExecutorService EXECUTOR = Executors.newThreadPerTaskExecutor(
+        Thread.ofVirtual().name("notification-bus-", 0).factory());
 
     /** Subscribe to receive SSE-formatted event strings. Returns an unsubscribe handle. */
     public static Runnable subscribe(Consumer<String> listener) {
@@ -62,20 +63,31 @@ public class NotificationBus {
                 try {
                     listener.accept(ssePayload);
                 } finally {
-                    // Clear any interrupt status before the worker returns to the pool —
-                    // future.cancel(true) interrupts the thread to abort a stalled listener,
-                    // and we don't want that flag to leak into the next task.
+                    // Clear any interrupt status before the worker thread terminates —
+                    // future.cancel(true) interrupts the thread to abort a stalled
+                    // listener; clearing it keeps the abort from surfacing as a stray
+                    // InterruptedException in any shutdown/finalization on this thread.
                     Thread.interrupted();
                 }
             }, EXECUTOR);
             pairs.add(java.util.Map.entry(listener, future));
         }
 
+        // One shared deadline for the whole fan-out: dispatches run concurrently on
+        // their own virtual threads, so the publisher's total wait is bounded to
+        // LISTENER_TIMEOUT_MS regardless of how many listeners are slow — get() each
+        // future against the time REMAINING to that deadline, not a fresh budget each.
+        var deadlineNanos = System.nanoTime() + TimeUnit.MILLISECONDS.toNanos(LISTENER_TIMEOUT_MS);
         var failed = new java.util.ArrayList<Consumer<String>>();
         for (var pair : pairs) {
             var future = pair.getValue();
             try {
-                future.get(LISTENER_TIMEOUT_MS, TimeUnit.MILLISECONDS);
+                var remainingNanos = deadlineNanos - System.nanoTime();
+                // A non-positive remaining budget still means "wait until the shared
+                // deadline" of now — get(0) returns immediately if already done,
+                // otherwise times out, so a listener that finished in time is never
+                // dropped while late ones are cancelled.
+                future.get(Math.max(0L, remainingNanos), TimeUnit.NANOSECONDS);
             } catch (TimeoutException _) {
                 future.cancel(true);
                 failed.add(pair.getKey());
